[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.5.0",
    "matplotlib>=3.10.5",
    "mplfinance>=0.12.10b0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "telegram>=0.0.1",
    "yfinance>=0.2.65",
]
